    (abrender at elitehosts dot com)

- Opcache:
  . Fixed bug #71127 (Define in auto_prepend_file is overwrite). (Laruence)
  . Fixed bug #71024 (Unable to use PHP 7.0 x64 side-by-side with PHP 5.6 x32
    on the same server). (Anatol)

- Session:
  . Fixed bug #71122 (Session GC may not remove obsolete session data). (Yasuo)

- Standard:
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)
    
17 Dec 2015, PHP 5.6.17

- Core:
  . Fixed bug #66909 (configure fails utf8_to_mutf7 test). (Michael Orlitzky)
  . Fixed bug #70958 (Invalid opcode while using ::class as trait method
    paramater default value). (Laruence)
  . Fixed bug #70957 (self::class can not be resolved with reflection for
    abstract class). (Laruence)
  . Fixed bug #70944 (try{ } finally{} can create infinite chains of
    exceptions). (Laruence)
  . Fixed bug #61751 (SAPI build problem on AIX: Undefined symbol:
    php_register_internal_extensions). (Lior Kaplan)

- Mysqlnd:
  . Fixed bug #68077 (LOAD DATA LOCAL INFILE / open_basedir restriction).
    (Laruence)

- SOAP:
  . Fixed bug #70900 (SoapClient systematic out of memory error). (Dmitry)

- Standard:
  . Fixed bug #70960 (ReflectionFunction for array_unique returns wrong number
    of parameters). (Laruence)

- PDO_Firebird:
  . Fixed bug #60052 (Integer returned as a 64bit integer on X64_86). (Mariuz)

26 Nov 2015, PHP 5.6.16

- Core:
  . Fixed bug #70828 (php-fpm 5.6 with opcache crashes when referencing a
    non-existent constant). (Laruence)
  . Fixed bug #70748 (Segfault in ini_lex () at Zend/zend_ini_scanner.l).
    (Laruence)

- Mysqlnd:
  . Fixed bug #68344 (MySQLi does not provide way to disable peer certificate
    validation) by introducing MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT
    connection flag. (Andrey)

- OCI8:
  . Fixed bug #68298 (OCI int overflow). (Senthil)

- PDO_DBlib:
  . Fixed bug #69757 (Segmentation fault on nextRowset).
    (miracle at rpz dot name)

- SOAP: